# maya-export

./: CMakeLists.txt  README.md
cmake/: FindMaya.cmake
output/: example.curves
src/: ExportCurvesCommand.cpp  ExportCurvesCommand.h  ExportHairCommand.cpp  ExportHairCommand.h  cmake_config.h.in  main.cpp
